--- a/.github/workflows/update-checker-Lean.yml
+++ b/.github/workflows/update-checker-Lean.yml
@@ -18,7 +18,7 @@ env:
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 0 ? * FRI  
+    - cron: 0 */18 * * *
 
 jobs:
   check:
@@ -42,6 +42,7 @@ jobs:
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
         echo ${{ steps.getHash.outputs.commitHash }} | tee .commitHash
+        
     - name: Trigger build
       if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v1
@@ -52,5 +53,5 @@ jobs:
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
-        retain_days: 14
-        keep_minimum_runs: 3
+        retain_days: 1
+        keep_minimum_runs: 1
