--- a/package.config
+++ b/package.config
@@ -68,3 +68,4 @@ CONFIG_PACKAGE_kmod-fs-nfs-v4=y
 CONFIG_PACKAGE_luci-app-accesscontrol=n
 CONFIG_PACKAGE_luci-app-vlmcsd=n
 CONFIG_PACKAGE_luci-app-wol=n
+CONFIG_PACKAGE_luci-app-unblockmusic=n
