--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -32,6 +32,7 @@ jobs:
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH .
         echo "::set-output name=commitHash::$(git rev-parse HEAD)"
+        
     - name: Compare Commit Hash
       id: cacheHash
       uses: actions/cache@v2
@@ -47,11 +48,11 @@ jobs:
       if: steps.cacheHash.outputs.cache-hit != 'true'
       uses: peter-evans/repository-dispatch@v1
       with:
-        token: ${{ secrets.Auto }}
+        token: ${{ secrets.ACTIONS_TRIGGER_PAT }}
         event-type: Source Code Update
 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
       with:
-        retain_days: 14
-        keep_minimum_runs: 3
+        retain_days: 30
+        keep_minimum_runs: 5
